# Synthetic-Data-Flywheel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
plans/: plan.md
rubrics/: default.yaml  factuality.yaml
src/synthetic_data_flywheel/: __init__.py  a2a_agent.py  cli.py  config.py  dataset_manager.py  engine.py  evaluator.py  generator.py  ingest.py  judge.py  judge_cache.py  labeler.py  models.py  pipeline.py  report_generator.py  rubrics.py  stats.py  trainer.py  validator.py  viz.py
src/synthetic_data_flywheel/judge_backends/: __init__.py  anthropic.py  base.py  ollama.py  openrouter.py  registry.py
tests/: conftest.py  test_cli_new.py  test_dataset_manager.py  test_evaluator.py  test_generator.py  test_ingest.py  test_integration.py  test_judge.py  test_judge_backends.py  test_labeler.py  test_models.py  test_pipeline.py  test_rubrics.py  test_sharpness.py  test_validator.py  test_viz.py
