[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-data-flywheel"
version = "0.1.0"
description = "A closed-loop autonomous pipeline for synthetic training data generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Synthetic Data Flywheel Team"}
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "datasets>=2.14.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0.0",
    "matplotlib>=3.7",
]

[project.scripts]
flywheel = "synthetic_data_flywheel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
